--- a/media/css/style.css
+++ b/media/css/style.css
@@ -12,6 +12,7 @@ input, textarea, button { background: #000000; border: 1px solid #FF0066; color:
 div#calendar { float: right; margin-right: 40px; width: 60%; }
 .red { color: #FF0066; }
 
+.right_float { float: right; }
 .right { text-align: right; padding-right: 10px; }
 .half { width: 50%; }
 
