--- a/templates/index.html
+++ b/templates/index.html
@@ -31,10 +31,22 @@ $(document).ready(function(){
     });
     $('.archive').click(function() {
         var href= $(this).attr('href')
+        var div = $(this).parent().parent()
         $.post( 
             href,
              {} ,
             function(data){ 
+                div.hide('slow');
+             } 
+         );  
+        return false;
+    });
+    $('#archive_all').click(function() {
+        var href= $(this).attr('href')
+        $.post( 
+            href,
+             {} ,
+             function(data){
                 alert(data); 
              } 
          );  
@@ -54,20 +66,23 @@ $(document).ready(function(){
         <div class="form-row"><input type="submit" value="ookay" /></div>
         </form>
     </div>
-</div>
+   </div>
 <h2>Latest unread items ({{ item_num }})</h2>
     {% for item in items.object_list %}
-        <div class="entry">
+    <div class="entry">
+            <div class="right right_float"><a href="{% root_url %}/archive/{{ item.id }}" class="archive" title="Archive">Archive</a></div>
+            <div class="right right_float">{{ item.feed.name }}</div>
             <h3><a href="{{ item.url }}">{{ item.title }}</a></h3>
             <div class="item"><code>{{ item.content|safe }}</code></div>
-            <div class="right right_float"><a href="{% root_url %}/archive/{{ item.id }}" class="archive" title="Archive">Archive</a></div>
+            <div class="right right_float">{{ item.date|date:"Y.m.d H:i:s" }}</div>
             <div class="item_footer">Tags:
                 {% for tag in item.tags.all %} <a href="{% root_url %}/tag/{{ tag.text }}" title="{{ tag }}">{{ tag }}</a>  {% endfor %}
                 {% for tag in item.feed.tags.all %} <a href="{% root_url %}/tag/{{ tag.text }}" title="{{ tag }}">{{ tag }}</a>  {% endfor %}<br />
-                {{ item.date|date:"Y.m.d H:i:s" }}</div>
+            </div>
         </div>
     {% endfor %}
-<div class="pagination right">
+    <div class="pagination right">
+        <a href="{% root_url %}/bulk_archive/{{ page_num }}" title="Archive page" id="archive_all">Archive page</a>
     <span class="step-links">
         {% if items.has_previous %}
             <a href="?page={{ items.previous_page_number }}">&lt;&lt; previous</a>
