--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,9 @@
 <script type="text/javascript">
 
 $(document).ready(function(){
-    $('#add_tag').click(function() {
-        $('#tagdiv').toggle('slow');
-        return false;
-    });
     $('#add_feed_link').click(function() {
         $('#feeddiv').toggle('slow');
         return false;
-    });
-    $('#post_new_tag').submit(function() {
-        var q = $("input[name='text']").val();
-        $.ajax({ url: "{% root_url %}/add_tag/"+q, context: document.body, success: function(){
-            $('#tagdiv').toggle('slow');
-        } });
     });
     $('#add_feed').submit(function() {
         $.post( 
@@ -82,10 +72,7 @@ $(document).ready(function(){
             <h3><a href="{{ item.url }}">{{ item.title }}</a></h3>
             <div class="item"><code>{{ item.content|safe }}</code></div>
             <div class="right right_float">{{ item.date|date:"Y.m.d H:i:s" }}</div>
-            <div class="item_footer">Tags:
-                {% for tag in item.tags.all %} <a href="{% root_url %}/tag/{{ tag.text }}" title="{{ tag }}">{{ tag }}</a>  {% endfor %}
-                {% for tag in item.feed.tags.all %} <a href="{% root_url %}/tag/{{ tag.text }}" title="{{ tag }}">{{ tag }}</a>  {% endfor %}<br />
-            </div>
+            <div class="item_footer"><code>[asdf]</code></div>
         </div>
         {% endfor %}
     <div class="pagination right">
@@ -108,11 +95,5 @@ $(document).ready(function(){
 </div>
 {% endblock %}
 {% block left %}
-<h1>All tags <a href="{% root_url %}/add_tag" title="Add a new tag" id="add_tag">[+]</a></h1>
-<div id="tagdiv" class="hidden border"><h4>Add new tag</h4><form action="{% root_url %}/add_tag" method="post" id="post_new_tag"><input type="text" name="text" /><br /><input type="submit" value="ookay" /></form> </div>
-<p>
-{% for tag in tags %}
-<a href="{% root_url %}/tag/{{ tag.text }}" title="{{ tag.text }}">{{ tag }}</a>
-{% endfor %}
-</p>
+<h1>Feeds</h1>
 {% endblock %}
