[mod] jquery moved to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <title>[!] f33dme {% block title %}{% endblock %}</title>
+    <script type="text/javascript" src="{% media_url %}/js/jquery-1.4.4.min.js"></script>
     {% block scripts %}
     {% endblock %}
     <link rel="stylesheet" type="text/css" media="all" href="{% media_url %}/css/style.css" />
