--- a/media/css/style.css
+++ b/media/css/style.css
@@ -19,9 +19,16 @@ div#calendar { float: right; margin-right: 40px; width: 60%; }
 
 .border { border: 1px solid #FF0066; padding: 8px; margin: 2px;}
 .hidden { display: none; }
+.center { text-align: center; }
 
 a { color: #FF0066; text-decoration: none; }
 a:hover { text-decoration: underline; }
+
+td, th { padding: 0 10px 2px 10px; margin: 0px;}
+th { border-width: 1px 0 1px 0; border-style: solid; border-color: #FF0066; }
+th { text-align: left; margin: 0;}
+tr:hover { background-color: #111111; }
+table { margin-left: 20px; border-spacing: 0; border-collapse: collapse; border-width: 0 1px 1px 1px; border-style: solid; border-color: #FF0066; }
 
 div.entry { margin: 10px; padding: 10px; border-bottom: 1px solid #66FF00;  }
 .item { padding: 4px 10px 4px 10px; background: #111111; border: 4px solid #000000; -moz-border-radius: 1em; -webkit-border-radius: 1em; }
