[mod]<code> tag removed from html

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -22,6 +22,7 @@ div#calendar { float: right; margin-right: 40px; width: 60%; }
 .center { text-align: center; }
 
 .archived { background: #222222; color: grey; }
+.item { font-family: monospace; }
 
 a { color: #FF0066; text-decoration: none; }
 a:hover { text-decoration: underline; }
